add theme selection

--- a/index.html
+++ b/index.html
@@ -12,9 +12,15 @@
 </head>
 <body>
  
-<video autoplay loop muted>
-		<source src="./BG-video/Railroad.mp4" type="video/mp4">
+<video autoplay loop muted class="BG_video" id="video">
+		<source src="" type="video/mp4">
 </video>
+
+<ul class="BG_option">
+  <li class="video_option">
+
+  </li>
+</ul>
 
 <div class="player">
   <!-- Dashboard -->
